# tiltmeter

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  METHODOLOGY.md  NOTICE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: outlets.yaml  reference_ratings.yaml
docs/: feasibility-factuality.md  glossary.md  how-it-works.md  outlets.md  research.md
docs/decisions/: 0001-story-selection-ideal-points-with-congressional-anchor.md  0002-pipeline-implementation-choices.md  0003-orientation-estimator-and-serving-shape.md  0004-content-addressed-store-with-custody-chain.md  0005-early-dev-reset-fingerprint-v3.md
releases/: custody-head.json  custody-heads.jsonl  manifest-2026-07-10_2026-07-11.json  ratings-2026-07-10_2026-07-11.json  stories-2026-07-10_2026-07-11.json  sweep-2026-07-10_2026-07-11.json  validation-2026-07-10_2026-07-11.json
releases/report-2026-07-10_2026-07-11/: axios.md  breitbart.md  cnn.md  cs-monitor.md  daily-wire.md  fox-news.md  huffpost.md  index.md  mother-jones.md  national-review.md  nbc-news.md  newsmax.md  npr.md  ny-post.md  nytimes.md  pbs-newshour.md  the-hill.md  the-nation.md  washington-examiner.md  washington-post.md  wsj.md
scripts/: check_docs_sync.sh  gen_outlets_doc.py
src/tiltmeter/: __init__.py  artifacts.py  cli.py  cluster.py  congress.py  db.py  embed.py  ingest.py  orient.py  reference.py  report.py  score.py  serve.py  snapshot.py  stats.py  sweep.py  validate.py
src/tiltmeter/signals/: __init__.py  selection.py
tests/: test_custody.py  test_docs.py  test_hardening.py  test_ingest.py  test_orient.py  test_reference.py  test_selection.py  test_serve.py  test_snapshot.py  test_validate.py
