[project]
name = "tiltmeter"
version = "0.1.0"
description = "Auditable, reproducible political-lean ratings for news outlets"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "flan", email = "flan@arch.fyi" }]
dependencies = [
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "pyyaml>=6.0",
]

[project.scripts]
tiltmeter = "tiltmeter.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "textstat>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiltmeter"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
